--- a/pom.xml
+++ b/pom.xml
@@ -609,7 +609,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit</artifactId>
-            <version>1.21</version>
+            <version>1.22-SNAPSHOT</version>
         </dependency>
 
 
